refactored attributes